--- a/01_Undervisningsnotater/5.-Lister-og-plotting/bqplot.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/bqplot.ipynb
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7951b2da9b0746bc981fd6e9df51a3bc",
+       "model_id": "5bb497bf77514ab79a7be926f2a02623",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,7 +75,7 @@
     "fig.title = 'Test'    # Setter på tittel\n",
     "plt.xlabel(label='x') # Navn på førsteaksen\n",
     "plt.ylabel(label='y') # Navn på andreaksen\n",
-    "fig"
+    "display(fig)"
    ]
   },
   {
