--- a/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.2_Numpy_Array.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.2_Numpy_Array.ipynb
@@ -14,7 +14,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hente biblioteket"
+    "### Hente biblioteket\n",
+    "----"
    ]
   },
   {
@@ -126,12 +127,12 @@
    "source": [
     "#### - np.zeros\n",
     "___\n",
-    "fyller en array med 0-er"
+    "fyller en array med 0-ere"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
     "#### - np.ones\n",
     "___\n",
     "\n",
-    "fyller en array med 1-er"
+    "fyller en array med 1-ere"
    ]
   },
   {
