--- a/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.2_Numpy_Array.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.2_Numpy_Array.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Numpy Array\n",
-    "matrise/vektor"
+    "<a href='https://docs.scipy.org/doc/numpy/user/quickstart.html'>Dokumentasjon</a>"
    ]
   },
   {
@@ -257,8 +257,7 @@
    "source": [
     "#### - np.linspace\n",
     "___\n",
-    "np.arange(fra, til og med, antall elementer)\n",
-    "\n"
+    "np.arange(fra, til og med, antall elementer)"
    ]
   },
   {
