--- a/01_Undervisningsnotater/5.-Lister-og-plotting/bqplot.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/bqplot.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,18 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d61da031f8fd49939d3899383e9f4024",
+       "model_id": "0672a3c919d149789a69413f0ec79786",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Figure(axes=[Axis(scale=LinearScale()), Axis(orientation='vertical', scale=LinearScale())], fig…"
+       "Figure(axes=[Axis(scale=LinearScale()), Axis(orientation='vertical', scale=LinearScale())], fig_margin={'top':…"
       ]
      },
      "metadata": {},
@@ -71,9 +71,10 @@
     }
    ],
    "source": [
-    "fig1 = plt.figure(1, title='Eksempel 1')\n",
+    "fig1 = plt.figure(title='Eksempel 1')\n",
     "plot1 = plt.plot(x, y)\n",
-    "plt.show()"
+    "fig1\n",
+    "#plt.show()"
    ]
   },
   {
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,24 +125,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Lines(colors=['dodgerblue'], interactions={'hover': 'tooltip'}, preserve_domain={'x': True, 'y': False}, scales={'x': LinearScale(allow_padding=False, max=1.0, min=0.0), 'y': LinearScale()}, scales_metadata={'x': {'orientation': 'horizontal', 'dimension': 'x'}, 'y': {'orientation': 'vertical', 'dimension': 'y'}, 'color': {'dimension': 'color'}}, stroke_width=1.0, tooltip_style={'opacity': 0.9}, x=array([0, 1]), y=array([0, 0]))"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fig2 = plt.figure()    \n",
+    "fig2 = plt.figure(title='Eksempel 2')\n",
     "plot1 = plt.plot(t, f(t))  \n",
-    "plot2 = plt.plot(t, g(t))"
+    "plot2 = plt.plot(t, g(t))\n",
+    "plot2.colors=['#E0671F']\n",
+    "plt.hline(0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "051b8bae15c9462fa1d20277a5ac9a13",
+       "model_id": "84bc877ccaee4bb9a368abb982002906",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,78 +169,7 @@
    ],
    "source": [
     "fig2.animation_duration = 1000\n",
-    "display(fig2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Eksempel 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import bqplot as bq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddcff1371d4d41aa96209afed59c9a44",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(animation_duration=1000, axes=[Axis(label='x', scale=LinearScale()), Axis(label='y', orientation='verti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "xs = bq.LinearScale()\n",
-    "ys = bq.LinearScale()\n",
-    "x = np.arange(100)\n",
-    "y = np.cumsum(np.random.randn(2, 100), axis=1) #two random walks\n",
-    "\n",
-    "line = bq.Lines(x=x, y=y, scales={'x': xs, 'y': ys})\n",
-    "\n",
-    "xax = bq.Axis(\n",
-    "    scale=xs, \n",
-    "    label='x', \n",
-    "    grid_lines='solid')\n",
-    "\n",
-    "yax = bq.Axis(\n",
-    "    scale=ys, \n",
-    "    orientation='vertical', \n",
-    "    tick_format='0.2f', \n",
-    "    label='y', \n",
-    "    grid_lines='solid')\n",
-    "\n",
-    "fig = bq.Figure(marks=[line], axes=[xax, yax], animation_duration=1000)\n",
-    "fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#update data of the line mark\n",
-    "line.y = np.cumsum(np.random.randn(2, 100), axis=1)"
+    "fig2"
    ]
   },
   {
@@ -235,6 +178,92 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "faef9e6c984541a8b74749bb19af7529",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(axes=[Axis(scale=DateScale()), Axis(orientation='vertical', scale=LinearScale())], fig_m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dates = np.arange(dt.datetime(2014, 1, 2), dt.datetime(2014, 1, 30), dt.timedelta(days=1))\n",
+    "\n",
+    "prices = np.array([[ 187.21  ,  187.4   ,  185.2   ,  185.53  ],\n",
+    "       [ 185.83  ,  187.35  ,  185.3   ,  186.64  ],\n",
+    "       [ 187.15  ,  187.355 ,  185.3   ,  186.    ],\n",
+    "       [ 186.39  ,  190.35  ,  186.38  ,  189.71  ],\n",
+    "       [ 189.33  ,  189.4175,  187.26  ,  187.97  ],\n",
+    "       [ 189.02  ,  189.5   ,  186.55  ,  187.38  ],\n",
+    "       [ 188.31  ,  188.57  ,  186.28  ,  187.26  ],\n",
+    "       [ 186.26  ,  186.95  ,  183.86  ,  184.16  ],\n",
+    "       [ 185.06  ,  186.428 ,  183.8818,  185.92  ],\n",
+    "       [ 185.82  ,  188.65  ,  185.49  ,  187.74  ],\n",
+    "       [ 187.53  ,  188.99  ,  186.8   ,  188.76  ],\n",
+    "       [ 188.04  ,  190.81  ,  187.86  ,  190.09  ],\n",
+    "       [ 190.23  ,  190.39  ,  186.79  ,  188.43  ],\n",
+    "       [ 181.28  ,  183.5   ,  179.67  ,  182.25  ],\n",
+    "       [ 181.43  ,  183.72  ,  180.71  ,  182.73  ],\n",
+    "       [ 181.25  ,  182.8141,  179.64  ,  179.64  ],\n",
+    "       [ 179.605 ,  179.65  ,  177.66  ,  177.9   ],\n",
+    "       [ 178.05  ,  178.45  ,  176.16  ,  176.85  ],\n",
+    "       [ 175.98  ,  178.53  ,  175.89  ,  176.4   ],\n",
+    "       [ 177.17  ,  177.86  ,  176.36  ,  177.36  ]])\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.ohlc(dates, prices)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
