--- a/01_Undervisningsnotater/5.-Lister-og-plotting/5_Lister_og_plotting_oppgaver.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/5_Lister_og_plotting_oppgaver.ipynb
@@ -274,6 +274,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Ekstra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_min_liste(l):\n",
+    "    min = l[0]\n",
+    "    for e in l:\n",
+    "        if e < min:\n",
+    "            min = e\n",
+    "    return min"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_sortert_liste(liste):\n",
+    "    l = liste.copy()\n",
+    "    sortert_l = []\n",
+    "    for i in range(len(l)):\n",
+    "        n = get_min_liste(l)\n",
+    "        sortert_l.append(n)\n",
+    "        l.remove(n) \n",
+    "    return sortert_l    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 2, 6, 15]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste = [15, 2, 2, 6]\n",
+    "get_sortert_liste(liste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[15, 2, 2, 6]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 2, 6, 15]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste.sort()\n",
+    "liste"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5.1.2 Matriser og tupler\n",
     "### Oppgave 5.17\n",
     "Lag to matriser. Fyll den ene med oddetall fra 1 til 101 og den andre\n",
