--- a/01_Undervisningsnotater/5.-Lister-og-plotting/Introduction.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/Introduction.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -75,13 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7ef64ef4f5f440798e7802bd6b053af",
+       "model_id": "93a0d1ec0b2b49fc8a6fd87c13c5c540",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfed94bb536241a5bfab7e239ed3a622",
+       "model_id": "fefde6060277435d96df00c1a166d49a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -170,7 +170,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "794f3834901749a78430d20dd33b2e76",
+       "model_id": "e7c592f89f7b4e2da790307db3a8e6ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,11 +197,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a trait change. Foo was called by the fact that we moved the Scatter\n",
+      "In fact, the Scatter plot sent us all the new data: \n",
+      "To access the data, try modifying the function and printing the data variable\n"
+     ]
+    }
+   ],
    "source": [
     "scatter_plot.y = np.cumsum(np.random.randn(size)  * 100.0)"
    ]
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -227,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -286,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -332,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -344,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -364,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -393,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -404,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -423,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -434,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -442,7 +452,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ea83480525146e6a67594b3fdbdd033",
+       "model_id": "3207e05b05864c9084c46e99ad14c8da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -479,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -487,7 +497,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ea83480525146e6a67594b3fdbdd033",
+       "model_id": "3207e05b05864c9084c46e99ad14c8da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -512,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -531,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -542,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -555,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -575,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -586,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -600,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -619,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
