--- a/01_Undervisningsnotater/5.-Lister-og-plotting/bqplot.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/bqplot.ipynb
@@ -5,7 +5,6 @@
    "metadata": {},
    "source": [
     "# bqplot\n",
-    "\n",
     "<a href='https://bqplot.readthedocs.io/en/latest/'>Dokumentasjon</a>"
    ]
   },
@@ -18,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,18 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0672a3c919d149789a69413f0ec79786",
+       "model_id": "73cd945027434705a0db8b5f42ea31b1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Figure(axes=[Axis(scale=LinearScale()), Axis(orientation='vertical', scale=LinearScale())], fig_margin={'top':…"
+       "VBox(children=(Figure(axes=[Axis(scale=LinearScale()), Axis(orientation='vertical', scale=LinearScale())], fig…"
       ]
      },
      "metadata": {},
@@ -71,10 +70,9 @@
     }
    ],
    "source": [
-    "fig1 = plt.figure(title='Eksempel 1')\n",
-    "plot1 = plt.plot(x, y)\n",
-    "fig1\n",
-    "#plt.show()"
+    "plt.figure(title='Eksempel 1')\n",
+    "plt.plot(x, y)\n",
+    "plt.show()"
    ]
   },
   {
@@ -86,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,37 +123,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Lines(colors=['dodgerblue'], interactions={'hover': 'tooltip'}, preserve_domain={'x': True, 'y': False}, scales={'x': LinearScale(allow_padding=False, max=1.0, min=0.0), 'y': LinearScale()}, scales_metadata={'x': {'orientation': 'horizontal', 'dimension': 'x'}, 'y': {'orientation': 'vertical', 'dimension': 'y'}, 'color': {'dimension': 'color'}}, stroke_width=1.0, tooltip_style={'opacity': 0.9}, x=array([0, 1]), y=array([0, 0]))"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig2 = plt.figure(title='Eksempel 2')\n",
     "plot1 = plt.plot(t, f(t))  \n",
     "plot2 = plt.plot(t, g(t))\n",
-    "plot2.colors=['#E0671F']\n",
-    "plt.hline(0)\n"
+    "plot2.colors=['#E0671F']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84bc877ccaee4bb9a368abb982002906",
+       "model_id": "da97613dff5745ed9f6ffe58590dba21",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,28 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,13 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "faef9e6c984541a8b74749bb19af7529",
+       "model_id": "a73f654ce77a4318803da5698e12077a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,6 +228,71 @@
     "plt.figure()\n",
     "plt.ohlc(dates, prices)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4a3355b6286d4bbd9d54d96920c60060",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FigureWidget({\n",
+       "    'data': [{'type': 'histogram2dcontour',\n",
+       "              'uid': '5c93c666-e121-11e8-9701-acbc3…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import plotly.graph_objs as go\n",
+    "import numpy as np\n",
+    "x = np.random.randn(1000)\n",
+    "y = np.random.randn(1000)\n",
+    "go.FigureWidget(data=[{'x': x, 'y': y, 'type': 'histogram2dcontour'}])"
    ]
   },
   {
