--- a/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.3_Matplotlib.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.3_Matplotlib.ipynb
@@ -3101,6 +3101,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Egne funksjoner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Oppgaver\n",
     "\n",
     "1. Plot en valgfri andregradsfunksjon med 10000 punkter. Aksene skal merkes.\n",
