--- a/03_Løsningsforslag/Oppgaver-fra-boka/5_Lister_og_plotting_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/5_Lister_og_plotting_løsningsforslag.ipynb
@@ -6201,7 +6201,11 @@
     "\n",
     "$$E(t)=E_K(t)+E_p(t)$$\n",
     "\n",
-    "der $E_k(t)=\\frac{1}{2}mv(t)^2$ er den kinetiske energien ved ei tid $t$ og $E_p(t)=mgy(t)$ er den potensielle energien ved ei tid $t$. Dersom et legeme slippes fra en klippe som er $33$ meter høy, kan høyden y(t) og farten v(t) uttrykkes som:\n",
+    "der $E_k(t)=\\frac{1}{2}m \\cdot v(t)^2$ er den kinetiske energien ved ei tid $t$ og $E_p(t)=m\\cdot g\\cdot y(t)$ er den potensielle energien ved ei tid $t$. Dersom et legeme slippes fra en klippe som er $33$ meter høy, kan høyden $y(t)$ og farten $v(t)$ uttrykkes som:\n",
+    "\n",
+    "$$y(t)=-\\frac12 \\cdot g \\cdot t^2 +33$$\n",
+    "\n",
+    "$$v(t)=-g\\cdot t$$\n",
     "\n",
     "Må gjøres fedig\n",
     "\n"
@@ -7545,7 +7549,7 @@
     "m = 2.75\n",
     "t = np.linspace(0,np.sqrt(66/g), 100)\n",
     "y = -(1/2) * g * t**2 +33\n",
-    "v = -g * t\n",
+    "v = -g*t\n",
     "E_k = (1/2) * m * v**2\n",
     "E_p = m * g * y \n",
     "    \n",
