--- a/Altair og pandas/01-Enkle-grafer.ipynb
+++ b/Altair og pandas/01-Enkle-grafer.ipynb
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nå så inneholder chart-variabelen kun en representasjon av dataframen og litt metadata i JSON-format."
+    "Nå inneholder chart-variabelen kun en representasjon av dataframen og litt metadata i JSON-format."
    ]
   },
   {
