--- a/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.2-Output-og-input.ipynb
+++ b/01_Undervisningsnotater/3.-Grunnleggende-programmering/3.2-Output-og-input.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Python language is very powerful tool for creating any kind of computer program, but today we're going to focus solely on how to apply some very basic techniques and ideas found in all computer programming languages."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -224,9 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hei, Steinar.\n",
+      "tall =    1.34   \n"
+     ]
+    }
+   ],
    "source": [
     "navn = 'Steinar'\n",
     "print(f'Hei, {navn}.')\n",
@@ -237,9 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hei, Steinar. Du er 52 år.\n"
+     ]
+    }
+   ],
    "source": [
     "navn = 'Steinar'\n",
     "alder = 52\n",
@@ -258,9 +273,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alder = 29\n",
+      "alder = 30\n"
+     ]
+    }
+   ],
    "source": [
     "alder = 29\n",
     "print(f'alder = {alder}')\n",
